/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.service.namespace.namespace.proto;

option java_package = "com.dremio.service.namespace.dirlist.proto";

option optimize_for = SPEED;
option java_generate_equals_and_hash = true;
option java_outer_classname = "DirListInputSplitProto";

import "partition.proto";

message DirListInputSplit {
  required string rootPath = 1;
  required string operatingPath = 2;
  required int64 readSignature = 3;
  optional bool isFile = 4;
  optional bool hasVersion = 5;
  optional bool hasFiles = 6;
  repeated string files = 7;
  optional string globPattern = 8;
  optional string schemeVariate = 9;
}
